--- a/drum.css
+++ b/drum.css
@@ -54,7 +54,7 @@ body{
     text-shadow: 3px 3px white;
 }
 .w{
-    background-image: url(/images/tom1.png);
+    background-image: url(images/tom1.png);
     background-size: cover;
     background-position: center;
     background-color: white;
@@ -62,7 +62,7 @@ body{
 }
 
 .a{
-    background-image: url(/images/tom2.png);
+    background-image: url(images/tom2.png);
     background-size: cover;
     background-position: center;
     background-color: white;
@@ -70,35 +70,35 @@ body{
 }
 
 .s{
-    background-image: url(/images/tom3.png);
+    background-image: url(images/tom3.png);
     background-size: cover;
     background-color: white;
     background-repeat: no-repeat;
 }
 
 .d{
-    background-image: url(/images/tom4.png);
+    background-image: url(images/tom4.png);
     background-size: cover;
     background-color: white;
     background-repeat: no-repeat;
 }
 
 .j{
-    background-image: url(/images/snare.png);
+    background-image: url(images/snare.png);
     background-size: cover;
     background-color: white;
     background-repeat: no-repeat;
 }
 
 .k{
-    background-image: url(/images/crash.png);
+    background-image: url(images/crash.png);
     background-size: cover;
     background-color: white;
     background-repeat: no-repeat;
 }
 
 .l{
-    background-image: url(/images/kick.png);
+    background-image: url(images/kick.png);
     background-size: cover;
     background-color: white;
     background-repeat: no-repeat;
